<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>com.fynd</groupId>
	<artifactId>example-extension-java-vue</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>groot</name>
	<description>Example java extension</description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.1.4</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<properties>
		<java.version>17</java.version>
		<maven.compiler.target>17</maven.compiler.target>
		<retrofit.version>2.3.0</retrofit.version>
		<okhttp3.version>3.14.7</okhttp3.version>
		<fdk-extension.version>0.6.4</fdk-extension.version>
		<fdk-client.version>1.4.7</fdk-client.version>
		<maven.compiler.source>22</maven.compiler.source>
		<maven.compiler.target>22</maven.compiler.target>
		<net.bytebuddy.experimental>true</net.bytebuddy.experimental>
	</properties>


	<dependencies>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-inline -->
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-inline</artifactId>
			<version>4.10.0</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.github.gofynd</groupId>
			<artifactId>fdk-client-java</artifactId>
			<version>${fdk-client.version}</version>
		</dependency>

		<dependency>
			<groupId>com.github.gofynd</groupId>
			<artifactId>fdk-extension-java</artifactId>
			<version>${fdk-extension.version}</version>
			<exclusions>
				<exclusion>
					<groupId>com.github.gofynd</groupId>
					<artifactId>fdk-client-java</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.squareup.okhttp3</groupId>
					<artifactId>okhttp-urlconnection</artifactId>
				</exclusion>
			</exclusions>
		</dependency>



        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.30</version>
			<scope>provided</scope>
		</dependency>
    </dependencies>

	<repositories>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>

	<build>
		<plugins>
			<plugin>
				<groupId>org.openclover</groupId>
				<artifactId>clover-maven-plugin</artifactId>
				<version>4.5.1</version>
				<configuration>
					<excludes>
						<exclude>**/*Test*</exclude>
					</excludes>
				</configuration>
				<executions>
					<execution>
						<id>clover</id>
						<phase>test</phase>
						<goals>
							<goal>instrument</goal>
							<goal>check</goal>
							<goal>clover</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<executions>
					<execution>
						<id>Copy my VueJS app into my Spring Boot target static folder</id>
						<phase>process-resources</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>target/classes/static</outputDirectory>
							<resources>
								<resource>
									<directory>app/dist</directory>
									<filtering>true</filtering>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>-Dnet.bytebuddy.experimental=true</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
